Included UUID to identify tasks, and future lists

--- a/README
+++ b/README
@@ -1,9 +1,11 @@
 Hazlo
 =====
 
-A simple todo list manager
+A simple todo list manager.
 
 Required software
 =================
 
  * GTK 3.12
+ * GOM
+ * libuuid
